--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 POSTGRES_DB=Proyectocloud
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD=Talon1528
+DATABASE_URL=postgresql://postgres:Talon1528@proyectocloud.coj6am6gk126.us-east-1.rds.amazonaws.com:5432/Proyectocloud
